// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEPRECATED_BooleanField should render a basic boolean input 1`] = `
<FormGroup
  check={true}
  className=""
  color=""
  tag="div"
>
  <Label
    check={true}
    className="control-label"
    htmlFor="id-mybooleanfield"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Input
      checked={false}
      className="form-check-input"
      id="id-mybooleanfield"
      onChange={[Function]}
      placeholder="placeholder"
      type="text"
    />
    <span
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      label
    </span>
  </Label>
</FormGroup>
`;

exports[`DEPRECATED_BooleanField should render a help text 1`] = `
<FormGroup
  check={true}
  className=""
  color=""
  tag="div"
>
  <Label
    check={true}
    className="control-label"
    htmlFor="id-mybooleanfield"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Input
      checked={false}
      className="form-check-input"
      id="id-mybooleanfield"
      onChange={[Function]}
      placeholder="placeholder"
      type="text"
    />
    <span
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      label
    </span>
  </Label>
  <FormText
    color="muted"
    tag="small"
  >
    help text
  </FormText>
</FormGroup>
`;

exports[`DEPRECATED_BooleanField should render a required input 1`] = `
<FormGroup
  check={true}
  className="required"
  color=""
  tag="div"
>
  <Label
    check={true}
    className="control-label"
    htmlFor="id-mybooleanfield"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Input
      checked={false}
      className="form-check-input"
      id="id-mybooleanfield"
      onChange={[Function]}
      placeholder="placeholder"
      required={true}
      type="text"
    />
    <span
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      label
    </span>
  </Label>
</FormGroup>
`;

exports[`DEPRECATED_BooleanField should render inline 1`] = `
<FormGroup
  check={true}
  className="d-inline-block"
  color=""
  tag="div"
>
  <Label
    check={true}
    className="control-label"
    htmlFor="id-mybooleanfield"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Input
      checked={false}
      className="form-check-input"
      id="id-mybooleanfield"
      onChange={[Function]}
      placeholder="placeholder"
      type="text"
    />
    <span
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      label
    </span>
  </Label>
</FormGroup>
`;

exports[`DEPRECATED_BooleanField should render the input with an error 1`] = `
<FormGroup
  check={true}
  className=""
  color="danger"
  tag="div"
>
  <Label
    check={true}
    className="control-label"
    htmlFor="id-mybooleanfield"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Input
      checked={false}
      className="form-check-input form-control-danger"
      id="id-mybooleanfield"
      onChange={[Function]}
      placeholder="placeholder"
      type="text"
    />
    <span
      style={
        Object {
          "verticalAlign": "middle",
        }
      }
    >
      label
    </span>
  </Label>
  <Errors>
    the value is wrong
  </Errors>
</FormGroup>
`;

exports[`DEPRECATED_BooleanField should use default props 1`] = `
Object {
  "label": "label",
  "name": "mybooleanfield",
  "onChange": [Function],
  "placeholder": "placeholder",
  "type": "checkbox",
  "value": false,
}
`;
